--- a/Trigrams/en.lproj/MainStoryboard.storyboard
+++ b/Trigrams/en.lproj/MainStoryboard.storyboard
@@ -1,23 +1,128 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="hYl-zF-bcW">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
-        <scene sceneID="5">
+        <!--List View Controller-->
+        <scene sceneID="oKR-hB-HSU">
             <objects>
-                <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
+                <tableViewController id="ep0-ic-GRN" customClass="ListViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" id="s9R-w9-6X8">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TrigramsCell" rowHeight="70" id="aR5-XS-M32" customClass="TrigramsTableViewCell">
+                                <rect key="frame" x="0.0" y="22" width="320" height="70"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="69"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="267" translatesAutoresizingMaskIntoConstraints="NO" id="RPF-N0-vhf">
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="52" id="8dU-iV-kT1"/>
+                                                <constraint firstAttribute="width" constant="267" id="IeN-yh-pKo"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="RPF-N0-vhf" firstAttribute="leading" secondItem="aR5-XS-M32" secondAttribute="leading" constant="20" type="default" id="TAl-Ay-qS8"/>
+                                    <constraint firstItem="RPF-N0-vhf" firstAttribute="centerY" secondItem="aR5-XS-M32" secondAttribute="centerY" type="user" id="cdt-z7-W2q"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="bookTextLabel" destination="RPF-N0-vhf" id="uYd-Ls-EPF"/>
+                                    <segue destination="xXS-Cq-DzW" kind="push" identifier="GenerateText" id="iGV-Ay-GRJ"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="ep0-ic-GRN" id="c91-l3-MAx"/>
+                            <outlet property="delegate" destination="ep0-ic-GRN" id="8EN-b4-wgR"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="XEd-7d-ub9"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wuz-Zd-Xt2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="776" y="31"/>
+        </scene>
+        <!--Text View Controller-->
+        <scene sceneID="SUq-Qq-JdW">
+            <objects>
+                <viewController id="xXS-Cq-DzW" customClass="TextViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="oOE-vn-5tF">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Text" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Z2Z-uk-C3V">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Z2Z-uk-C3V" firstAttribute="top" secondItem="oOE-vn-5tF" secondAttribute="top" type="default" id="6ad-O4-p0B"/>
+                            <constraint firstItem="Z2Z-uk-C3V" firstAttribute="bottom" secondItem="oOE-vn-5tF" secondAttribute="bottom" type="default" id="CF6-cP-wDc"/>
+                            <constraint firstItem="Z2Z-uk-C3V" firstAttribute="leading" secondItem="oOE-vn-5tF" secondAttribute="leading" type="default" id="VWE-md-KWx"/>
+                            <constraint firstItem="Z2Z-uk-C3V" firstAttribute="trailing" secondItem="oOE-vn-5tF" secondAttribute="trailing" type="default" id="p01-tn-GCA"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="ps4-78-3yl"/>
+                    <connections>
+                        <outlet property="textView" destination="Z2Z-uk-C3V" id="krb-Ed-57d"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C4U-K5-JyZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1214" y="31"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="BCY-aZ-VZf">
+            <objects>
+                <navigationController id="hYl-zF-bcW" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oX9-oD-9s3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ep0-ic-GRN" kind="relationship" relationship="rootViewController" id="aTg-fQ-SZe"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uo6-BD-Mc7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="250" y="31"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="ListViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ListViewController.h"/>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="TextViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TextViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="textView" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="TrigramsTableViewCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TrigramsTableViewCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="bookTextLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
